--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.6.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.3",
+    "sass": "^1.83.4",
     "tailwind-merge": "^2.2.1",
     "web-vitals": "^2.1.4"
   },
